--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-google-generativeai==0.8.3
-requests==2.32.3
-gradio>=6.0.0
+huggingface_hub>=0.20.0
+gradio>=5.8.0
 tavily-python==0.5.0
 pandas>=2.0.0
-openpyxl>=3.1.0
+requests>=2.32.0
 python-dotenv>=1.0.0
