Update documentation for Llama-3.1-70B primary model and Groq fallback
- Updated README.md to reflect Llama-3.1-70B as primary model
- Added Groq API (Llama-3.3-70B) fallback documentation
- Updated architecture diagram to show fallback flow
- Added GROQ_API_KEY to .env.example and configuration docs
- Updated app.py UI text to reflect new model configuration
- Updated hf-space/README.md with new model information

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ TAVILY_API_KEY=your_tavily_key_here
 # GAIA Benchmark API URL
 # This should be provided by the GAIA benchmark organizers
 GAIA_API_URL=https://agents-course-unit4-scoring.hf.space
+
+# Groq API Key (Optional - for automatic fallback)
+# Get yours at: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_key_here
